# GPP-SAT-Toy

./: CMakeLists.txt  LICENSE  README.md
lib/mm/: CMakeLists.txt
lib/mm/include/mm/: vec2.h
lib/mm/src/: vec2.cpp
src/: CMakeLists.txt  main.cpp  rect.cpp  rect.h  shape.cpp  shape.h
src/finished/: main.cpp
