cmake_minimum_required(VERSION 3.24)

project(GPP-SAT-Toy)

set(CMAKE_BINARY_DIR ${PROJECT_SOURCE_DIR}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED true)


# Projects
#
add_subdirectory(src)
add_subdirectory(external/imgui)
add_subdirectory(external/raylib)
add_subdirectory(lib/mm)




